# agentic-converter-py

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.json  constitution.md  pyproject.toml
.codex/: config.toml
config/: config.json  config.local.example.json
docs/: PITCH.md  TASK.md
docs/data-demo/input/1/: Jenkinsfile
docs/data-demo/output/1/: ci.yml  report.md
docs/data-demo/output/2/: ci.yml  report.md
input/2/: Jenkinsfile
specs/001-agentic-converter/: plan.md  spec.md  tasks.md
specs/002-conversion-report/: plan.md  spec.md  tasks.md
specs/003-agent-specific-parameters/: plan.md  spec.md  tasks.md
specs/004-file-only-configuration/: plan.md  spec.md  tasks.md
specs/005-io-boundary-hardening/: plan.md  spec.md  tasks.md
specs/006-docs-runtime-parity/: plan.md  spec.md  tasks.md
src/: __init__.py  main.py
src/agents/: __init__.py  converter.py  reviewer.py
src/config/: __init__.py  manager.py
src/graph/: __init__.py  pipeline.py
src/llm/: __init__.py  client.py
src/prompts/: converter.md  reviewer.md
src/report/: __init__.py  generator.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_pipeline.py  test_report.py
